--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ascii-table": "^0.0.9",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "mongoose": "^6.8.4"
   }
 }
