--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
-    "mongoose": "^6.8.4"
+    "mongoose": "^6.8.4",
+    "node-fetch": "^3.3.0"
   }
 }
