--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.8.0",
+    "@distube/spotify": "^1.5.1",
     "ascii-table": "^0.0.9",
     "discord-html-transcripts": "^3.1.3",
     "discord.js": "^14.7.1",
+    "discord.js-leveling": "^5.4.0",
+    "distube": "^4.0.4",
     "dotenv": "^16.0.3",
+    "ffmpeg-static": "^4.4.1",
     "fs": "^0.0.1-security",
+    "libsodium-wrappers": "^0.7.10",
     "mongoose": "^6.8.4",
-    "node-fetch": "^3.3.0"
+    "node-fetch": "^3.3.0",
+    "yt-search": "^2.10.4",
+    "ytdl-core": "^4.11.2"
   }
 }
