--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@distube/spotify": "^1.5.1",
     "ascii-table": "^0.0.9",
     "discord-html-transcripts": "^3.1.3",
+    "discord-youtube": "^1.1.1",
     "discord.js": "^14.7.1",
     "discord.js-leveling": "^5.4.0",
     "distube": "^4.0.4",
@@ -22,6 +23,7 @@
     "libsodium-wrappers": "^0.7.10",
     "mongoose": "^6.8.4",
     "node-fetch": "^3.3.0",
+    "openai": "^3.1.0",
     "yt-search": "^2.10.4",
     "ytdl-core": "^4.11.2"
   }
