--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@discordjs/opus": "^0.8.0",
     "@distube/spotify": "^1.5.1",
     "ascii-table": "^0.0.9",
+    "cpu-stat": "^2.0.1",
     "discord-html-transcripts": "^3.1.3",
     "discord-youtube": "^1.1.1",
     "discord.js": "^14.7.1",
