--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
     "@distube/spotify": "^1.5.1",
+    "@iamtraction/google-translate": "^2.0.1",
     "ascii-table": "^0.0.9",
     "cpu-stat": "^2.0.1",
     "discord-html-transcripts": "^3.1.3",
@@ -22,6 +23,7 @@
     "ffmpeg-static": "^4.4.1",
     "fs": "^0.0.1-security",
     "libsodium-wrappers": "^0.7.10",
+    "midjourney-client": "^1.0.2",
     "mongoose": "^6.8.4",
     "node-fetch": "^3.3.0",
     "openai": "^3.1.0",
