--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "discord.js-leveling": "^5.4.0",
     "distube": "^4.0.4",
     "dotenv": "^16.0.3",
+    "ffmpeg-static": "^4.4.1",
     "fs": "^0.0.1-security",
     "libsodium-wrappers": "^0.7.10",
     "midjourney-client": "^1.0.2",
@@ -27,7 +28,6 @@
     "node-fetch": "^3.3.0",
     "openai": "^3.1.0",
     "yt-search": "^2.10.4",
-    "ytdl-core": "^4.11.2",
-    "ffmpeg-static": "^4.4.1"
+    "ytdl-core": "^4.11.2"
   }
 }
