--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@iamtraction/google-translate": "^2.0.1",
     "ascii-table": "^0.0.9",
     "cpu-stat": "^2.0.1",
+    "dayjs": "^1.11.7",
     "discord-html-transcripts": "^3.1.3",
     "discord-together": "^1.3.31",
     "discord-youtube": "^1.1.1",
