--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cpu-stat": "^2.0.1",
     "dayjs": "^1.11.7",
     "discord-html-transcripts": "^3.1.3",
+    "discord-logs": "^2.2.1",
     "discord-together": "^1.3.31",
     "discord-youtube": "^1.1.1",
     "discord.js": "^14.7.1",
